--- a/webapp/src/app.html
+++ b/webapp/src/app.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-		%sveltekit.head%
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    %sveltekit.head%
     <link rel="stylesheet" href="/style.css" />
-	</head>
-	<body data-sveltekit-preload-data="hover">
+  </head>
+  <body data-sveltekit-preload-data="hover">
     <div class="background-gradient"></div>
     <div class="scanlines-static"></div>
 
     <!-- Web app -->
     <div style="display: contents">%sveltekit.body%</div>
-	</body>
+  </body>
 </html>
