--- a/webapp/src/app.html
+++ b/webapp/src/app.html
@@ -14,6 +14,6 @@
     <div class="scanlines-static"></div>
 
     <!-- Web app -->
-    <div style="display: contents">%sveltekit.body%</div>
+    <div class="webapp-body">%sveltekit.body%</div>
   </body>
 </html>
