--- a/webapp/src/app.html
+++ b/webapp/src/app.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/style.css" />
   </head>
   <body data-sveltekit-preload-data="hover">
     <div class="background-gradient"></div>
